cmake_minimum_required (VERSION 3.4.1)
project (learnSample)
set(OpenCV_DIR E:\\Projects\\cpp\\opencv\\build\\x64\\vc15\\lib)
find_package(OpenCV REQUIRED )
include_directories(${OpenCV_INCLUDE_DIRS})
set(Caffe_Dir E:\\Projects\\cpp\\caffe)
include_directories(${Caffe_Dir}/include)
add_executable(learnSample main.cpp)
target_link_libraries( learnSample ${OpenCV_LIBS} ${Caffe_Dir}/lib/caffe.lib)
